[package]
name = "nous"
version = "0.1.0"
authors = ["mcncm <mcnallychristopherm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.0"
git2 = "0.10.0"
serde_json = "1.0"
reqwest = "0.9.20"
clap = {version = "2.33.0", features = ["yaml"]}