[package]
name = "nous"
version = "0.1.0"
authors = ["mcncm <mcnallychristopherm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.10.0"
url = { version = "2.1.0", features = ["serde"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
typetag = "0.1"
reqwest = "0.9.20"
clap = {version = "2.33.0", features = ["yaml"]}
sha2 = "0.8"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]